JS corrections w.r.t parseInt(). JS update for filtered update of class graded. Added "Graded for Class" in Grades list. Not showing graduates in this list. While viewing grades, inconsistencies are highlighted. File path updated for displaying graphs. Test script corrected: don't generate grades for graduates in current year.

--- a/templates/yoo_master2/css/custom.css
+++ b/templates/yoo_master2/css/custom.css
@@ -85,6 +85,7 @@ td.gradeHead {
 .duplicateErr {
 	color: red;
 	font-size:1.5em;
+	margin-left:5px;
 }
 
 .message {
